# raytracing-bvh

./: CMakeLists.txt
src/: main.cpp
src/raytrace/: color.h  interval.cpp  interval.h  ray.h  vec2.h
src/raytrace/hittables/: aabb.h  bvh.h  circle.h  hittable.h  hittable_list.h
src/raytrace/hittables/bvh/: bvh_sequential.h  bvh_slicing.cpp  bvh_slicing.cu  bvh_slicing.h
src/render/: renderer.cpp  renderer.h  scene_loader.cpp  scene_loader.h
src/util/: raytrace.h
